# botify-api

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
botify/: __init__.py  api.py  errors.py  models.py
docs/: conf.py  index.rst  requirements.txt
docs/botify/: api.rst  errors.rst  examples.rst  models
examples/: async.py  example.env  images.py  sync.py
