[project]
name = "botify-api"
description = "An API wrapper for the Botify API"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = ["discord", "bot", "botify", "api"]
authors = [
    { name = "Timo" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "botify.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
GitHub = "https://github.com/timoo4devv/botify-api"
Documentation = "https://botify-api.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"